--- a/src/AppBeacon/app/build.gradle
+++ b/src/AppBeacon/app/build.gradle
@@ -1,9 +1,11 @@
+
 plugins {
     id 'com.android.application'
 }
 
 android {
     compileSdk 30
+    buildFeatures{viewBinding true}
 
     defaultConfig {
         applicationId "com.example.jcherram.appbeacon"
