--- a/src/AppBeacon/app/build.gradle
+++ b/src/AppBeacon/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
     testImplementation 'junit:junit:4.+'
     implementation "androidx.recyclerview:recyclerview:ultima-version"
     implementation'com.github.bumptech.glide:glide:4.11.0'
