--- a/src/AppBeacon/app/build.gradle
+++ b/src/AppBeacon/app/build.gradle
@@ -33,8 +33,10 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
