--- a/src/AppBeacon/app/src/main/AndroidManifest.xml
+++ b/src/AppBeacon/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -42,6 +43,7 @@
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
+       
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -61,6 +63,9 @@
         </activity>
 
         <service android:name=".controlador.ServicioEscuharBeacons" />
+        
+        <activity android:name=".QrActivity"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="preloaded_fonts"
