--- a/src/AppBeacon/app/build.gradle
+++ b/src/AppBeacon/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.firebase:protolite-well-known-types:17.1.1'
     testImplementation 'junit:junit:4.+'
     implementation "androidx.recyclerview:recyclerview:ultima-version"
     implementation'com.github.bumptech.glide:glide:4.11.0'
