--- a/src/AppBeacon/app/src/main/AndroidManifest.xml
+++ b/src/AppBeacon/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:theme="@style/Theme.AppBeacon"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".modelo.ActivityInfoContaminante"
+            android:name=".ActivityInfoContaminante"
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
