--- a/src/AppBeacon/app/build.gradle
+++ b/src/AppBeacon/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
