--- a/src/AppBeacon/app/src/main/AndroidManifest.xml
+++ b/src/AppBeacon/app/src/main/AndroidManifest.xml
@@ -34,18 +34,20 @@
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".ActivityHistorialMediciones"
-            android:exported="true" />
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
         <activity
