--- a/src/AppBeacon/app/src/main/AndroidManifest.xml
+++ b/src/AppBeacon/app/src/main/AndroidManifest.xml
@@ -38,6 +38,17 @@
 
         </activity>
         <activity
+            android:name=".ActivityHistorialMedicionesSemanal"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".ActivityHistorialMedicionesMensual"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".RegisterActivity"
             android:exported="true" />
         <activity
